--- a/1. microservice/userservice/user-service/src/main/resources/application.yml
+++ b/1. microservice/userservice/user-service/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 server:
-  port: 9001
+  port: 0
 
 spring:
   application:
     name: user-service
 
 eureka:
+  instance:
+    instance-id: ${spring.cloud.client.hostname} :${spring.application.instance_id :${random.value}}
   client:
     ## EUREKA ????? ?????? ??? ????? ????(true)
     register-with-eureka: true
