--- a/1. microservice/project/userService/user-service/pom.xml
+++ b/1. microservice/project/userService/user-service/pom.xml
@@ -70,6 +70,11 @@
 			<version>2.4.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
