--- a/1. microservice/catalog/catalog-service/src/main/resources/application.yml
+++ b/1. microservice/catalog/catalog-service/src/main/resources/application.yml
@@ -6,9 +6,10 @@ spring:
     name: catalog-service
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
     generate-ddl: true
+    defer-datasource-initialization: true
   h2:
     console:
       enabled: true
@@ -20,6 +21,7 @@ spring:
     url: jdbc:h2:mem:testdb
     username: sa
     password:
+
 
 eureka:
   instance:
