--- a/1. microservice/gateway/springGateway/apigateway-service/src/main/resources/application.yml
+++ b/1. microservice/gateway/springGateway/apigateway-service/src/main/resources/application.yml
@@ -24,6 +24,12 @@ spring:
           uri: lb://USER-SERVICE
           predicates:
             - Path=/user-service/**
+
+        - id: catalog-service
+          uri: lb://CATALOG-SERVICE
+          predicates:
+            - Path=/catalog-service/**
+
         - id: first-service
           uri: lb://MY-FIRST_SERVICE
           predicates:
